Add user management API and UI. Add enabling/disabling of registration feature. Create general DataTable React component for Devices and Users tables.

--- a/AppInCloud/Pages/Account/Login.cshtml
+++ b/AppInCloud/Pages/Account/Login.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-3">
         <form method="post">
-            <p>Sign into the app with the <b>Email</b> address <code>maria.rodriguez@contoso.com</code> and any password.</p>
+            <p>Sign into the app.</p>
             <hr>
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
